--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ dist-ssr
 *.pyc
 הצעות לשיפור.txt
 /backend/__pycache__
+הוראות_הרצה.md
+הצעות לשיפור.docx
+backend/__pycache__/main.cpython-39.pyc
+/backend/__pycache__
